--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -4,8 +4,8 @@ sidebar_position: 1
 
 # Welcome to Subset Docs
 
-:::warning
+:::info
 This is still a work in progress documentation site for Subset
 :::
 
-To contribute submit pull requests on [Github](https://github.com/subset-data)
+To contribute submit pull requests on [Github](https://github.com/subset-data/docs)
